tests/haste_use_name_reducers/haste_use_name_reducers.exp
Error ----------------------------------------------------------------------------------------------------- index.js:3:2

Cannot cast `require(...)` to boolean because `Decl` [1] is incompatible with boolean [2].

   index.js:3:2
   3| (require('Module1'): boolean);
       ^^^^^^^^^^^^^^^^^^

References:
   dir1/Module1.js.flow:7:31
   7| module.exports = (new Decl(): Decl);
                                    ^^^^ [1]
   index.js:3:22
   3| (require('Module1'): boolean);
                           ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- index.js:6:9

Cannot resolve module `Module4`.

   6| require('Module4');
              ^^^^^^^^^



Found 2 errors
